TT-1345: LoA1 picker AB test [on hold]
Partial commit of the AB test as it's being put on hold due to reporting issues. Basics (routing, views etc) are done, missing mainly reporting/analytics part of the story + validation on radio buttons.

Solo: @jakubmiarka

--- a/stub/ab_test.yml
+++ b/stub/ab_test.yml
@@ -31,3 +31,11 @@ experiments:
           percent: 0
         - name: 'no_logo_privacy'
           percent: 0
+  - loa1_picker:
+      alternatives:
+        - name: 'control'
+          percent: 100
+        - name: 'variant_radio_verify'
+          percent: 0
+        - name: 'variant_radio_account'
+          percent: 0
