--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,7 +34,12 @@ jobs:
       - save_cache:
           paths:
             - ./vendor/bundle
+            - $HOME/.phantomjs
           key: v1-dependencies-{{ checksum "Gemfile.lock" }}
+
+      - run: "export DISPLAY=:99.0"
+      - run: "sh -e /etc/init.d/xvfb start"
+      - run: sleep 3 # give xvfb some time to start
 
       - run: bundle exec rake
 
