--- a/.travis.yml
+++ b/.travis.yml
@@ -1,30 +1,14 @@
 sudo: required
 
 language: ruby
-rvm: 
-  - 2.3.5
 
 services:
   - docker
 
 before_install:
-  - docker build -t frontend .
-  - docker run -it --rm -v "$TRAVIS_BUILD_DIR:/app" frontend
+  - docker pull swilson96/frontend-spike
 
-before_script:
-  - "export DISPLAY=:99.0"
-  - "sh -e /etc/init.d/xvfb start"
-  - sleep 3 # give xvfb some time to start
-  - export BUILD_NUMBER=1
-
-script: "./jenkins.sh"
-
-cache:
-  directories:
-    - $HOME/.phantomjs 
-
-addons:
-  firefox: "45.9.0esr"
+script: docker run -it --rm -v "$TRAVIS_BUILD_DIR:/app" swilson96/frontend-spike
 
 deploy:
   skip_cleanup: true
