--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,14 +7,14 @@ jobs:
   build:
     docker:
       # specify the version you desire here
-       - image: circleci/ruby:2.3.5-node-browsers
+       - image: swilson96/frontend-spike
       
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
       # documented at https://circleci.com/docs/2.0/circleci-images/
       # - image: circleci/postgres:9.4
 
-    working_directory: ~/repo
+    working_directory: /app
 
     steps:
       - checkout
@@ -34,14 +34,6 @@ jobs:
       - save_cache:
           paths:
             - ./vendor/bundle
-            - $HOME/.phantomjs
           key: v1-dependencies-{{ checksum "Gemfile.lock" }}
 
-      - run: "export DISPLAY=:99.0"
-      - run: "sh -e /etc/init.d/xvfb start"
-      - run: sleep 3 # give xvfb some time to start
-
-      - run: bundle exec rake
-
-      - run: export BUILD_NUMBER=1
       - run: ./jenkins.sh
